--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+<ul>	
+	<% if user_signed_in? %>
+		<li><%= link_to current_user.email, edit_user_registration_path %></li>
+		<li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+		<li><%= link_to 'show', users_show_path%></li>
+	<% else %>
+		<li><%= link_to 'Sign Up', new_user_registration_path %></li>
+		<li><%= link_to 'Sign In', new_user_session_path %></li>
+	<% end %>
+</ul>
+<div class="container">
+	<% if notice %><div class="alert alert-info"><%= notice %></div> <% end %>
+	<% if alert %><div class="alert alert-warning"><%= alert %></div> <% end %>
+</div>
 
 <%= yield %>
 
