--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,18 +5,23 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+  <link href='https://fonts.googleapis.com/css?family=Indie+Flower' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Open+Sans+Condensed:300' rel='stylesheet' type='text/css'>
 </head>
 <body>
-<ul>	
-	<% if user_signed_in? %>
-		<li><%= link_to current_user.email, edit_user_registration_path %></li>
-		<li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
-		<li><%= link_to 'show', users_show_path%></li>
-	<% else %>
-		<li><%= link_to 'Sign Up', new_user_registration_path %></li>
-		<li><%= link_to 'Sign In', new_user_session_path %></li>
-	<% end %>
-</ul>
+<nav>
+	<ul>	
+		<% if user_signed_in? %>
+			<li>Welcome <%= link_to current_user.email, edit_user_registration_path %></li>
+			<li><%= link_to 'Enter_Mind', users_show_path %></li>
+			<li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+			<li><%= link_to 'home', root_path %></li>
+		<% else %>
+			<li><%= link_to 'Sign Up', new_user_registration_path %></li>
+			<li><%= link_to 'Sign In', new_user_session_path %></li>
+		<% end %>
+	</ul>
+</nav>	
 <div class="container">
 	<% if notice %><div class="alert alert-info"><%= notice %></div> <% end %>
 	<% if alert %><div class="alert alert-warning"><%= alert %></div> <% end %>
