--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,9 +12,10 @@
 <nav>
 	<ul>	
 		<% if user_signed_in? %>
-			<li>Welcome <%= link_to current_user.email, edit_user_registration_path %></li>
+			<li>Welcome <%= current_user.email %></li>
 			<li><%= link_to 'Enter_Mind', users_show_path %></li>
 			<li><%= link_to 'Logout', destroy_user_session_path, method: :delete %></li>
+			<li><%= link_to 'Edit Account', edit_user_registration_path %></li>
 			<li><%= link_to 'home', root_path %></li>
 		<% else %>
 			<li><%= link_to 'Sign Up', new_user_registration_path %></li>
