--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,7 +3,9 @@
 		<p><%= @joined_on %></p>
 	</div>
 </div>
-<div class="all_entries">
+<div class="new-entry-form">
 	<%= render 'daily_entries/form' %>
+</div>
+<div class="all_entries">
 		<%= render 'daily_entries/daily_entry' %>
 </div>
