--- a/app/assets/stylesheets/daily_entries.scss
+++ b/app/assets/stylesheets/daily_entries.scss
@@ -1,26 +1,29 @@
 // Place all the styles related to the daily_entries controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-$darkestorange : #e47a0a;
+$darkestorange : #f25252;
+// #e47a0a;
 $lightblue : #87e0fd;
 $white : #fff;
 $largest-font: 85px;
 $mid-font: 18px;
 $nav-bar-font: 'Open Sans Condensed', sans-serif;
 $light-gray: #eeeeee;
+$border-gray: #c1c1c3;
+
 div.all_entries {
-	width: 70%;
-	padding-left: 10%;
+	width: 80%;
+	padding-left: 12%;
 	background-color: $light-gray;
 	// float: right;
 	
 	div.single_entry {
-		width: 30%;
+		width: 25%;
 		box-sizing: border-box;
 		float: left;
-		margin-right: 1em;
-		margin-bottom: 1em;
-		border: 3px solid #c1c1c3;
+		margin-right: 2em;
+		margin-bottom: 2em;
+		border: 3px solid $border-gray;
 		font-family: $nav-bar-font;
 		background-color: $light-gray;		
 	}
@@ -33,10 +36,39 @@ div.all_entries {
 			padding: 1em;
 			color: $white;
 		}
-		div.daily-entry-body {
-			padding: 3em;
-
+	}
+	div.daily-entry-body {
+			width: 85%;
+			h3, p {
+				padding-left: 1em;
+			}
 		}
+}
+
+div.new-entry-form {
+	margin-left: 12%;
+	clear: both;
+	padding: 5%;
+	border: 1px solid #c1c1c3;
+	color: $border-gray;
+	width: 65%; 
+	input, textarea {
+		width: 85%;
+		border-bottom: 1px solid $border-gray; 
+		border-top: none;
+		border-left: none;
+		border-right: none;
+	}
+	ul li {
+		list-style: none;
+		display: inline-block;
+		width: 5%;
+	}
+	#daily_entry_title {
+		width: 30%; 
+	}
+	#daily_entry_body {
+		height: 300px;
 	}
 }
 
